# robotics-club-signin

./: .gitignore  Cargo.toml  Rocket.toml  fabfile.py  nginx_file  robotics-club-signin.service
frontend/: package.json  webpack.dev.js  webpack.prod.js
frontend/src/: index.css  index.js
frontend/src/models/: Member.js  Signin.js
frontend/src/utils/: request.js
frontend/src/views/: Admin.js  Regular.js
migrations/: 0001.initial.down.sql  0001.initial.up.sql  0002.Make_foreign_key_constraint_valid.up.sql
src/: cors.rs  main.rs  members.rs  signins.rs  types.rs
src/db/: member.rs  mod.rs  signin.rs
