[package]
name = "robotics-club-signin"
version = "0.1.0"
authors = ["Nicholas Day <nick@nickendo.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"

r2d2_sqlite = "0.2.1"
r2d2 = "0.7.3"

chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tera = { version = "^0.10" }

[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false
features = ["json"]

[dependencies.rusqlite]
git = "https://github.com/1300webpro/rusqlite"
version = "0.12.0"
features = ["chrono"]

[replace]
"rusqlite:0.12.0" = { git = "https://github.com/1300webpro/rusqlite", features = ["chrono"] }