[package]
name = "robotics-club-signin"
version = "0.1.0"
authors = ["Nicholas Day <nick@nickendo.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }

chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4"

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

tera = "1"
dotenvy = "0.15.1"

rusqlite = { version = "0.25", features = ["chrono", "bundled"] }
rocket_cors = "0.6.0-alpha1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]
